--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,36 +1,105 @@
-html,
-body {
-    color: white;
-    background-color: black;
-
+/* GLOBAL OPTIONS */
+body, html {
+		height: 100%;
+		padding: 0;
+		margin: 0;
+		background-color: black;
 }
 
-.header{
-	font-size: 60px;
-	font-family: "sans-serif";
+/* FONTS */
+@font-face {
+		font-family: "Harabara";
+		src: url("static/fonts/Harabara.woff2") format("woff")
 }
 
-.icon {
-	margin-left: 21px;
-	margin-right: 20px;
-
-	padding-left: 5px;
-	padding-right: 5px;
-	padding-top: 5px;
-	padding-bottom: 5px;
+/* CENTER SIDE */
+.center {
+		width: 100%;
+		height: 100%;
 }
 
-.cv {
-	font-family: "Harabara";
-	font-size: 2vh;
-  color: white;
-	margin-top: 2vh;
-	border: 1px solid white;
-	border-radius: 5px;
-	padding: 1vh;
-	text-align: center;
+.center .center-content {
+		width: 100%;
+		height: 100%;
+		margin: auto;
+		display: flex;
 }
 
- a:hover{
-   text-decoration: none
- }
+.center .center-content .center-wrapper {
+		width: 100%;
+		margin: auto;
+		text-align: center;
+		border: 1px solid black;
+		border-radius: 2px;
+}
+
+.center .center-content .center-wrapper .name {
+		font-size: 4vh;
+		text-align: center;
+		color: white;
+}
+
+.center .center-content .center-wrapper .img-wrapper {
+		width: 50%;
+		margin: auto;
+}
+
+.center .center-content .center-wrapper .img-wrapper img {
+		width: 15%;
+		height: 15%;
+		border-radius: 50%;
+		border: 1px solid white;
+}
+
+.center .center-content .center-wrapper .status {
+		font-family: "Harabara";
+		font-size: 3vh;
+		text-align: center;
+		margin-top: 6px;
+		color: white;
+}
+
+.center .center-content .center-wrapper .find-me-here {
+		font-size: 3vh;
+		text-align: center;
+		margin-top: 10vh;
+		color: white;
+}
+
+.center .center-content .center-wrapper .social-networks {
+		margin-top: 1vh;
+		display: flex;
+		align-items: center;
+  	justify-content: center;
+}
+
+.center .center-content .center-wrapper .link img {
+		width: 4vh;
+}
+
+.center .center-content .center-wrapper a {
+		margin-right: 1vh;
+		margin-left: 1vh;
+}
+
+.center .center-content .center-wrapper .resume-content {
+		margin: auto;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+}
+
+.center .center-content .center-wrapper .resume-content .cv {
+		width: 17vh;
+		font-size: 2vh;
+  	color: white;
+		margin-top: 2vh;
+		border: 1px solid white;
+		border-radius: 5px;
+		padding: 1vh;
+		text-align: center;
+}
+
+.center .center-content .center-wrapper .resume-content a {
+	 	text-decoration: none;
+}
